examples/test/testpolicy3845.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3845
  namespace: namespace46
spec:
  podSelector:
    matchLabels:
      key12: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value49
          key34: value35
          key10: value2
      podSelector:
        matchLabels:
          key7: value30
